--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<html>
+  <head>
+    
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-BJJBCCDXJV"></script>
 <script>
@@ -7,3 +10,6 @@
 
   gtag('config', 'G-BJJBCCDXJV');
 </script>
+
+    </head>
+</html>
